fix: update select value

--- a/react-components/src/components/Results/Results.css
+++ b/react-components/src/components/Results/Results.css
@@ -10,3 +10,9 @@
     width: 100%;
     background-color: #ffffff;
 }
+
+.results__title {
+    font-size: 40px;
+    font-weight: 700;
+    width: 220px;
+}
