--- a/react-components/src/App.css
+++ b/react-components/src/App.css
@@ -28,6 +28,52 @@ input[type="text"] {
     border: none;
 }
 
+::-webkit-scrollbar {
+    width: 15px;
+    background-color: #193a56;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #247c04c4;
+    border-radius: 9em;
+    box-shadow: inset 1px 1px 10px #F0F0F0;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #193a56;
+}
+
+::-webkit-scrollbar-button:vertical:start:decrement {
+    background: linear-gradient(120deg, #000000 40%, rgba(0, 0, 0, 0) 41%),
+        linear-gradient(240deg, #000000 40%, rgba(0, 0, 0, 0) 41%),
+        linear-gradient(0deg, #000000 30%, rgba(0, 0, 0, 0) 31%);
+    background-color: #F0F0F0;
+}
+
+::-webkit-scrollbar-button:vertical:end:increment {
+    background:
+        linear-gradient(300deg, #000000 40%, rgba(0, 0, 0, 0) 41%),
+        linear-gradient(60deg, #000000 40%, rgba(0, 0, 0, 0) 41%),
+        linear-gradient(180deg, #000000 30%, rgba(0, 0, 0, 0) 31%);
+    background-color: #F0F0F0;
+}
+
+::-webkit-scrollbar-button:horizontal:start:decrement {
+    background:
+        linear-gradient(30deg, #000000 40%, rgba(0, 0, 0, 0) 41%),
+        linear-gradient(150deg, #000000 40%, rgba(0, 0, 0, 0) 41%),
+        linear-gradient(270deg, #000000 30%, rgba(0, 0, 0, 0) 31%);
+    background-color: #F0F0F0;
+}
+
+::-webkit-scrollbar-button:horizontal:end:increment {
+    background:
+        linear-gradient(210deg, #02141a 40%, rgba(0, 0, 0, 0) 41%),
+        linear-gradient(330deg, #02141a 40%, rgba(0, 0, 0, 0) 41%),
+        linear-gradient(90deg, #02141a 30%, rgba(0, 0, 0, 0) 31%);
+    background-color: #f6f8f4;
+}
+
 body {
     font-family: 'Darker Grotesque', sans-serif;
     max-height: 100vh;
