feat: add adaptive layout

--- a/react-components/src/App.css
+++ b/react-components/src/App.css
@@ -34,13 +34,13 @@ input[type="text"] {
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #247c04c4;
+    background-color: #193a56;
     border-radius: 9em;
     box-shadow: inset 1px 1px 10px #F0F0F0;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: #193a56;
+    background-color: rgb(0, 136, 255);
 }
 
 ::-webkit-scrollbar-button:vertical:start:decrement {
@@ -83,4 +83,10 @@ body {
 .app {
     max-height: 100vh;
     overflow-y: scroll;
+}
+
+@media (max-width: 1020px) {
+    ::-webkit-scrollbar {
+        width: 0;
+    }
 }
