--- a/react-components/src/components/Cards/Cards.css
+++ b/react-components/src/components/Cards/Cards.css
@@ -8,3 +8,15 @@
     gap: 11px;
 }
 
+@media (max-width: 1020px) {
+    .cards {
+        max-width: 675px;
+    }
+}
+
+@media (max-width: 700px) {
+    .cards {
+        max-width: 100%;
+    }
+}
+
