--- a/react-components/src/components/NotFound/NotFound.css
+++ b/react-components/src/components/NotFound/NotFound.css
@@ -24,19 +24,19 @@
     margin: 0 10px 0 0;
 }
 
-.return-button div {
-    margin-top: -3px;
-}
-  
 .return-button:hover img {
     transform: translateX(-12px);
+}
+
+.return-button p {
+    margin-top: -3px;
 }
   
 .title {
     font-size: 20px;
 }
   
-.error__wrapper {
+.error {
     overflow: hidden;
     display: flex;
     width: 100%;
@@ -44,28 +44,28 @@
     font-size: 85px;
 }
   
-.error__wrapper div {
+.error p {
     margin: 5px 25px;
     display: flex;
     align-items: center;
 }
   
-.first {
+.error__first {
     filter: blur(1.5px);
     font-size: 60px;
 }
   
-.second {
+.error__second {
     filter: blur(3px);
     font-size: 50px;
 }
   
-.last {
+.error__last {
     filter: blur(4.5px);
     font-size: 42px;
 }
   
-.main__error {
+.error__basic {
     text-shadow: 3px 2px 2px #313131be;
 }
 
