feat: configure eslint and stylelint

--- a/react-components/src/App.css
+++ b/react-components/src/App.css
@@ -1,93 +1,92 @@
-@import url('https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;600;700&display=swap');
+@import "https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;600;700&display=swap";
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    -webkit-tap-highlight-color: transparent;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 select {
-    outline: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    border: none;
+  outline: none;
+  appearance: none;
+  border: none;
 }
 
 input[type="text"] {
-    outline: none;
-    background: transparent;
-    border: none;
+  outline: none;
+  background: transparent;
+  border: none;
 }
 
 ::-webkit-scrollbar {
-    width: 15px;
-    background-color: #193a56;
+  width: 15px;
+  background-color: #193a56;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #193a56;
-    border-radius: 9em;
-    box-shadow: inset 1px 1px 10px #F0F0F0;
+  background-color: #193a56;
+  border-radius: 9em;
+  box-shadow: inset 1px 1px 10px #f0f0f0;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: rgb(0, 136, 255);
+  background-color: rgb(0 136 255);
 }
 
 ::-webkit-scrollbar-button:vertical:start:decrement {
-    background: linear-gradient(120deg, #000000 40%, rgba(0, 0, 0, 0) 41%),
-        linear-gradient(240deg, #000000 40%, rgba(0, 0, 0, 0) 41%),
-        linear-gradient(0deg, #000000 30%, rgba(0, 0, 0, 0) 31%);
-    background-color: #F0F0F0;
+  background:
+    linear-gradient(120deg, #000 40%, rgb(0 0 0 / 0%) 41%),
+    linear-gradient(240deg, #000 40%, rgb(0 0 0 / 0%) 41%),
+    linear-gradient(0deg, #000 30%, rgb(0 0 0 / 0%) 31%);
+  background-color: #f0f0f0;
 }
 
 ::-webkit-scrollbar-button:vertical:end:increment {
-    background:
-        linear-gradient(300deg, #000000 40%, rgba(0, 0, 0, 0) 41%),
-        linear-gradient(60deg, #000000 40%, rgba(0, 0, 0, 0) 41%),
-        linear-gradient(180deg, #000000 30%, rgba(0, 0, 0, 0) 31%);
-    background-color: #F0F0F0;
+  background:
+    linear-gradient(300deg, #000 40%, rgb(0 0 0 / 0%) 41%),
+    linear-gradient(60deg, #000 40%, rgb(0 0 0 / 0%) 41%),
+    linear-gradient(180deg, #000 30%, rgb(0 0 0 / 0%) 31%);
+  background-color: #f0f0f0;
 }
 
 ::-webkit-scrollbar-button:horizontal:start:decrement {
-    background:
-        linear-gradient(30deg, #000000 40%, rgba(0, 0, 0, 0) 41%),
-        linear-gradient(150deg, #000000 40%, rgba(0, 0, 0, 0) 41%),
-        linear-gradient(270deg, #000000 30%, rgba(0, 0, 0, 0) 31%);
-    background-color: #F0F0F0;
+  background:
+    linear-gradient(30deg, #000 40%, rgb(0 0 0 / 0%) 41%),
+    linear-gradient(150deg, #000 40%, rgb(0 0 0 / 0%) 41%),
+    linear-gradient(270deg, #000 30%, rgb(0 0 0 / 0%) 31%);
+  background-color: #f0f0f0;
 }
 
 ::-webkit-scrollbar-button:horizontal:end:increment {
-    background:
-        linear-gradient(210deg, #02141a 40%, rgba(0, 0, 0, 0) 41%),
-        linear-gradient(330deg, #02141a 40%, rgba(0, 0, 0, 0) 41%),
-        linear-gradient(90deg, #02141a 30%, rgba(0, 0, 0, 0) 31%);
-    background-color: #f6f8f4;
+  background:
+    linear-gradient(210deg, #02141a 40%, rgb(0 0 0 / 0%) 41%),
+    linear-gradient(330deg, #02141a 40%, rgb(0 0 0 / 0%) 41%),
+    linear-gradient(90deg, #02141a 30%, rgb(0 0 0 / 0%) 31%);
+  background-color: #f6f8f4;
 }
 
 body {
-    font-family: 'Darker Grotesque', sans-serif;
-    max-height: 100vh;
-    overflow: hidden;
+  font-family: "Darker Grotesque", sans-serif;
+  max-height: 100vh;
+  overflow: hidden;
 }
 
 .app {
-    max-height: 100vh;
-    overflow-y: scroll;
+  max-height: 100vh;
+  overflow-y: scroll;
 }
 
 @media (max-width: 1020px) {
-    ::-webkit-scrollbar {
-        width: 0;
-    }
+  ::-webkit-scrollbar {
+    width: 0;
+  }
 }
