--- a/react-components/src/components/AboutPage/AboutPage.css
+++ b/react-components/src/components/AboutPage/AboutPage.css
@@ -1,180 +1,179 @@
 .about {
-    background-color: #F0F0F0;
+  background-color: #f0f0f0;
 }
 
 .about__container,
 .opportunities__container {
-    max-width: 1280px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+  max-width: 1280px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .about img {
-    width: 500px;
-    margin: 50px;
+  width: 500px;
+  margin: 50px;
 }
 
 .about__content {
-    width: 400px;
+  width: 400px;
 }
 
 .about__content h2 {
-    font-size: 60px;
-    line-height: 50px;
+  font-size: 60px;
+  line-height: 50px;
 }
 
 .about__content p {
-    font-size: 20px;
-    margin-top: 30px;
+  font-size: 20px;
+  margin-top: 30px;
 }
 
 .diet {
-    max-width: 1000px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 30px;
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  padding: 30px;
 }
 
 .diet__card {
-    width: 200px;
-    height: 300px;
-    margin: 10px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-    padding: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  width: 200px;
+  height: 300px;
+  margin: 10px;
+  box-shadow: rgb(50 50 93 / 25%) 0 50px 100px -20px, rgb(0 0 0 / 30%) 0 30px 60px -30px;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .diet__card h3 {
-    margin-bottom: 10px;
-    text-transform: uppercase;
-    border-bottom: 2px solid rgb(0, 136, 255);
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  border-bottom: 2px solid rgb(0 136 255);
 }
 
 .opportunities {
-    background-color: #F0F0F0;
-    padding: 30px 0;
+  background-color: #f0f0f0;
+  padding: 30px 0;
 }
 
 .opportunities__container img {
-    width: 400px;
+  width: 400px;
 }
 
 .opportunities__container h2,
 .contacts__content h2 {
-    font-size: 40px;
+  font-size: 40px;
 }
 
 .opportunities__container p,
 .contacts__content p {
-    margin: 20px 0;
-    font-size: 25px;
-    line-height: 28px;
+  margin: 20px 0;
+  font-size: 25px;
+  line-height: 28px;
 }
 
 .opportunities__content {
-    width: 500px;
+  width: 500px;
 }
 
 .opportunities__content ul {
-    margin-bottom: 20px;
-    font-size: 20px;
-    width: 370px;
+  margin-bottom: 20px;
+  font-size: 20px;
+  width: 370px;
 }
 
 .contacts {
-    max-width: 1000px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 0 70px 0;
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 0 70px;
 }
 
 .contacts__content {
-    width: 500px;
+  width: 500px;
 }
 
 @media (max-width: 1150px) {
-    .about img {
-        margin: 50px 20px 50px 0;
-    }
+  .about img {
+    margin: 50px 20px 50px 0;
+  }
 }
 
 @media (max-width: 1050px) {
-    .about__container,
-    .opportunities__container {
-        flex-direction: column;
-    }
+  .about__container,
+  .opportunities__container {
+    flex-direction: column;
+  }
 
-    .about img {
-        width: 400px;
-        margin: 50px 0 50px 0;
-    }
+  .about img {
+    width: 400px;
+    margin: 50px 0;
+  }
 
-    .about__content {
-        margin-top: 50px;
-    }
+  .about__content {
+    margin-top: 50px;
+  }
 
-    .opportunities__container img {
-        margin: 50px 0;
-    }
+  .opportunities__container img {
+    margin: 50px 0;
+  }
 
-    .opportunities__content {
-        margin-top: 50px;
-    }
+  .opportunities__content {
+    margin-top: 50px;
+  }
 
-    .contacts__content {
-        padding: 20px;
-    }
+  .contacts__content {
+    padding: 20px;
+  }
 }
 
 @media (max-width: 950px) {
-    .diet {
-        justify-content: center;
-    }
+  .diet {
+    justify-content: center;
+  }
 }
 
 @media (max-width: 800px) {
-    .contacts {
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        padding: 50px 0 80px 0;
-    }
+  .contacts {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px 0 80px;
+  }
 }
 
 @media (max-width: 540px) {
-    .about__content {
-        width: 280px;
-    }
+  .about__content {
+    width: 280px;
+  }
 
-    .about img {
-        width: 280px;
-    }
+  .about img {
+    width: 280px;
+  }
 
-    .opportunities__content {
-        width: 280px;
-    }
-    
-    .opportunities__content ul {
-        width: 280px;
-    }
+  .opportunities__content {
+    width: 280px;
+  }
 
-    .opportunities__container img {
-        width: 280px;
-    }
+  .opportunities__content ul {
+    width: 280px;
+  }
 
-    .contacts__content {
-        width: 280px;
-    }
+  .opportunities__container img {
+    width: 280px;
+  }
+
+  .contacts__content {
+    width: 280px;
+  }
 }
