--- a/react-components/src/components/Cards/Cards.css
+++ b/react-components/src/components/Cards/Cards.css
@@ -1,22 +1,20 @@
 .cards {
-    max-width: 1000px;
-    padding: 20px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    gap: 11px;
+  max-width: 1000px;
+  padding: 20px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  gap: 11px;
 }
 
 @media (max-width: 1020px) {
-    .cards {
-        max-width: 675px;
-    }
+  .cards {
+    max-width: 675px;
+  }
 }
 
 @media (max-width: 700px) {
-    .cards {
-        max-width: 100%;
-    }
+  .cards {
+    max-width: 100%;
+  }
 }
-
