--- a/react-components/src/components/Dropdown/Dropdown.css
+++ b/react-components/src/components/Dropdown/Dropdown.css
@@ -1,43 +1,43 @@
 .cards__results {
-    width: 550px;
-    height: 65px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  width: 550px;
+  height: 65px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .selects {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    gap: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
 }
 
 .select__coisine,
 .select__diet {
-    background-color: #ffffff;
-    color: #000000;
-    width: 105px;
-    font-family: inherit;
-    font-size: inherit;
-    font-weight: 600;
-    cursor: pointer;
-    padding: 7px;
-    user-select: none;
+  background-color: #fff;
+  color: #000;
+  width: 105px;
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: 600;
+  cursor: pointer;
+  padding: 7px;
+  user-select: none;
 }
 
 .select__coisine {
-    width: 110px;
+  width: 110px;
 }
 
 @media (max-width: 600px) {
-    .cards__results {
-        width: 280px;
-        height: 100px;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
+  .cards__results {
+    width: 280px;
+    height: 100px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
