--- a/react-components/src/components/Results/Results.css
+++ b/react-components/src/components/Results/Results.css
@@ -1,18 +1,18 @@
 .results {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #F0F0F0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f0f0f0;
 }
 
 .results__container {
-    width: 100%;
-    background-color: #ffffff;
+  width: 100%;
+  background-color: #fff;
 }
 
 .results__title {
-    font-size: 40px;
-    font-weight: 700;
-    width: 220px;
+  font-size: 40px;
+  font-weight: 700;
+  width: 220px;
 }
