--- a/react-components/src/components/SearchBar/SearchBar.css
+++ b/react-components/src/components/SearchBar/SearchBar.css
@@ -1,61 +1,61 @@
 .search {
-    width: 100%;
-    height: 65px;
-    background-color: #000000;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+  width: 100%;
+  height: 65px;
+  background-color: #000;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .search__container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: #ffffff;
-    width: 550px;
-    height: 40px;
-    border-bottom: 5px solid rgb(0, 136, 255);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #fff;
+  width: 550px;
+  height: 40px;
+  border-bottom: 5px solid rgb(0 136 255);
 }
 
 .search__title {
-    font-size: 26px;
-    padding-left: 10px;
-    font-weight: 600;
+  font-size: 26px;
+  padding-left: 10px;
+  font-weight: 600;
 }
 
 .search__image {
-    width: 20px;
+  width: 20px;
 }
 
 .search__bar {
-    width: 300px;
-    font-size: 20px;
-    padding: 0 5px;
+  width: 300px;
+  font-size: 20px;
+  padding: 0 5px;
 }
 
 @media (max-width: 600px) {
-    .search {
-        height: 100px;
-    }
+  .search {
+    height: 100px;
+  }
 
-    .search__container {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        width: 280px;
-        height: 80px;
-        position: relative;
-    }
+  .search__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 280px;
+    height: 80px;
+    position: relative;
+  }
 
-    .search__image {
-        position: absolute;
-        right: 10px;
-        top: 10px;
-    }
+  .search__image {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+  }
 
-    .search__bar {
-        width: 270px;
-        align-self: center;
-        padding: 10px 5px;
-    }
+  .search__bar {
+    width: 270px;
+    align-self: center;
+    padding: 10px 5px;
+  }
 }
