--- a/react-components/src/components/InputDate/InputDate.css
+++ b/react-components/src/components/InputDate/InputDate.css
@@ -1,7 +1,9 @@
 .input-date__container {
   display: flex;
+  height: 117px;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
   gap: 5px;
   color: #fff;
   background-color: #2d383f;
@@ -13,7 +15,7 @@
 }
 
 ::-webkit-datetime-edit-text {
-  padding: 0 4px;
+  padding: 0 3px;
 }
 
 ::-webkit-inner-spin-button {
@@ -21,7 +23,7 @@
 }
 
 .input-date::-webkit-calendar-picker-indicator {
-  padding-right: 10px;
+  padding-right: 9px;
   cursor: pointer;
   background-image: url("../../assets/icons/calendar.svg");
 }
