--- a/react-components/src/components/RecipeCards/RecipeCards.css
+++ b/react-components/src/components/RecipeCards/RecipeCards.css
@@ -9,7 +9,7 @@
 }
 
 .recipe__cards {
-  width: 1000px;
+  width: 1157px;
   margin: 0 auto;
   padding: 20px 20px 52px;
   display: flex;
@@ -21,4 +21,18 @@
 .recipe__message {
   margin: 20px auto;
   font-weight: 600;
+}
+
+@media (max-width: 1200px) {
+  .recipe__cards {
+    width: 500px;
+    gap: 20px;
+    padding: 20px 0 52px;
+  }
+}
+
+@media (max-width: 540px) {
+  .recipe__cards {
+    width: 280px;
+  }
 }
