--- a/react-components/src/components/NotFound/NotFound.css
+++ b/react-components/src/components/NotFound/NotFound.css
@@ -69,6 +69,12 @@
   text-shadow: 3px 2px 2px #313131be;
 }
 
+@media (max-width: 540px) {
+  .wrapper {
+    height: calc(100vh - 100px);
+  }
+}
+
 @media (max-width: 470px) {
   .title {
     max-width: 300px;
