--- a/react-components/src/components/RecipeCard/RecipeCard.css
+++ b/react-components/src/components/RecipeCard/RecipeCard.css
@@ -1,5 +1,5 @@
 .recipe-card {
-  width: 200px;
+  width: 240px;
   background-color: #fff;
   border-bottom: 5px solid rgb(0 136 255);
   box-shadow: rgb(50 50 93 / 25%) 0 50px 100px -20px, rgb(0 0 0 / 30%) 0 30px 60px -30px;
@@ -11,11 +11,12 @@
 }
 
 .recipe-card img {
-  width: 200px;
+  width: 240px;
 }
 
 .recipe-card__content {
   padding: 10px;
+  font-size: 18px;
 }
 
 .recipe-card__content span {
@@ -25,4 +26,24 @@
 
 .recipe-card__content p {
   margin: 5px 0;
+}
+
+@media (max-width: 1200px) {
+  .recipe-card {
+    width: 240px;
+  }
+
+  .recipe-card img {
+    width: 240px;
+  }
+}
+
+@media (max-width: 540px) {
+  .recipe-card {
+    width: 280px;
+  }
+
+  .recipe-card img {
+    width: 280px;
+  }
 }
