--- a/react-components/src/components/Switcher/Switcher.css
+++ b/react-components/src/components/Switcher/Switcher.css
@@ -14,12 +14,13 @@
   margin: 5px 5px 5px 0;
   z-index: -1;
   opacity: 0;
+  display: none;
 }
 
 .switcher__container {
   margin: 10px 0;
   background-color: #2d383f;
-  padding: 10px;
+  padding: 10px 20px;
   color: #fff;
   border-radius: 5px;
 }
