--- a/react-components/src/components/Results/Results.css
+++ b/react-components/src/components/Results/Results.css
@@ -16,3 +16,30 @@
   font-weight: 700;
   width: 220px;
 }
+
+.cards__results {
+  width: 550px;
+  height: 65px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.selects {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+}
+
+@media (max-width: 600px) {
+  .cards__results {
+    width: 280px;
+    height: 100px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
