--- a/react-components/src/components/Checkbox/Checkbox.css
+++ b/react-components/src/components/Checkbox/Checkbox.css
@@ -1,6 +1,6 @@
 .checkbox__container {
   margin-top: 10px;
-  height: 355px;
+  height: 390px;
   color: #fff;
   background-color: #2d383f;
   padding: 10px 20px;
@@ -16,7 +16,8 @@
 .checkbox:not(:checked),
 .checkbox:checked {
   opacity: 0;
-  display: none;
+  width: 0;
+  height: 0;
 }
 
 .checkbox__label {
