--- a/react-components/src/components/InputDate/InputDate.css
+++ b/react-components/src/components/InputDate/InputDate.css
@@ -19,7 +19,8 @@
 }
 
 ::-webkit-inner-spin-button {
-  display: none;
+  width: 0;
+  height: 0;
 }
 
 .input-date::-webkit-calendar-picker-indicator {
