--- a/react-components/src/components/Main/Main.css
+++ b/react-components/src/components/Main/Main.css
@@ -2,4 +2,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: calc(100vh - 65px);
+}
+
+@media (max-width: 540px) {
+  .main {
+    min-height: calc(100vh - 100px);
+  }
 }
