--- a/react-api/src/components/Results/Results.css
+++ b/react-api/src/components/Results/Results.css
@@ -3,12 +3,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #f0f0f0;
+  background-color: #202329;
 }
 
 .results__container {
   width: 100%;
-  background-color: #fff;
+  background-color: #000;
+  color: #fff;
 }
 
 .results__title {
@@ -24,14 +25,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-}
-
-.selects {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  gap: 20px;
 }
 
 @media (max-width: 600px) {
