--- a/react-api/src/App.css
+++ b/react-api/src/App.css
@@ -1,4 +1,5 @@
-@import "https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;600;700&display=swap";
+@import "https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;500&display=swap";
+@import "https://fonts.googleapis.com/css2?family=Paytone+One&display=swap";
 
 * {
   margin: 0;
@@ -28,53 +29,21 @@ input[type="text"] {
 
 ::-webkit-scrollbar {
   width: 15px;
-  background-color: #193a56;
+  background-color: #3c3e44;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #193a56;
+  background-color: #202329;
   border-radius: 9em;
-  box-shadow: inset 1px 1px 10px #f0f0f0;
+  box-shadow: inset 1px 1px 10px #fff;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: rgb(0 136 255);
-}
-
-::-webkit-scrollbar-button:vertical:start:decrement {
-  background:
-    linear-gradient(120deg, #000 40%, rgb(0 0 0 / 0%) 41%),
-    linear-gradient(240deg, #000 40%, rgb(0 0 0 / 0%) 41%),
-    linear-gradient(0deg, #000 30%, rgb(0 0 0 / 0%) 31%);
-  background-color: #f0f0f0;
-}
-
-::-webkit-scrollbar-button:vertical:end:increment {
-  background:
-    linear-gradient(300deg, #000 40%, rgb(0 0 0 / 0%) 41%),
-    linear-gradient(60deg, #000 40%, rgb(0 0 0 / 0%) 41%),
-    linear-gradient(180deg, #000 30%, rgb(0 0 0 / 0%) 31%);
-  background-color: #f0f0f0;
-}
-
-::-webkit-scrollbar-button:horizontal:start:decrement {
-  background:
-    linear-gradient(30deg, #000 40%, rgb(0 0 0 / 0%) 41%),
-    linear-gradient(150deg, #000 40%, rgb(0 0 0 / 0%) 41%),
-    linear-gradient(270deg, #000 30%, rgb(0 0 0 / 0%) 31%);
-  background-color: #f0f0f0;
-}
-
-::-webkit-scrollbar-button:horizontal:end:increment {
-  background:
-    linear-gradient(210deg, #02141a 40%, rgb(0 0 0 / 0%) 41%),
-    linear-gradient(330deg, #02141a 40%, rgb(0 0 0 / 0%) 41%),
-    linear-gradient(90deg, #02141a 30%, rgb(0 0 0 / 0%) 31%);
-  background-color: #f6f8f4;
+  background-color: #202329;
 }
 
 body {
-  font-family: "Darker Grotesque", sans-serif;
+  font-family: Inconsolata, monospace;
   max-height: 100vh;
   overflow: hidden;
 }
