--- a/react-api/src/components/Card/Card.css
+++ b/react-api/src/components/Card/Card.css
@@ -1,30 +1,76 @@
 .card {
-  width: 312px;
-  background-color: #fff;
-  border-bottom: 5px solid rgb(0 136 255);
-  box-shadow: rgb(50 50 93 / 25%) 0 50px 100px -20px, rgb(0 0 0 / 30%) 0 30px 60px -30px;
+  width: 610px;
+  background-color: #3c3e44;
+  display: flex;
+  flex-direction: row;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: #3c3e44 0 20px 30px -10px;
   transition: box-shadow 0.5s;
+  cursor: pointer;
 }
 
 .card:hover {
-  box-shadow: rgb(38 57 77) 0 20px 30px -10px;
+  box-shadow: #3c3e44 0 20px 90px -20px, #3c3e44 0 30px 30px -30px;
 }
 
-.card__title {
-  margin: 0 5px 10px;
+.card__content {
+  padding: 20px;
+  color: #fff;
+}
+
+.card__name {
+  margin-bottom: 5px;
+  letter-spacing: 1.5px;
+  font-size: 25px;
   font-weight: 600;
+  font-family: "Paytone One", sans-serif;
 }
 
 .card img {
-  width: 312px;
+  width: 220px;
 }
 
-@media (max-width: 700px) {
-  .card {
-    width: 100%;
-  }
+.card__caption {
+  color: #9e9e9e;
+  margin-bottom: 5px;
+}
 
-  .card img {
-    width: 100%;
-  }
+.card__caption p {
+  text-transform: capitalize;
+}
+
+.card__container,
+.card__wrapper {
+  margin-bottom: 16px;
+}
+
+.card__dash {
+  margin: 0 3px;
+}
+
+.card__wrapper {
+  font-weight: 600;
+  letter-spacing: 1px;
+  display: flex;
+  flex-direction: row;
+}
+
+.card__circle {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  margin: 3px 7px 3px 0;
+}
+
+.circle__purple {
+  background-color: #9386a4;
+}
+
+.circle__green {
+  background-color: #5c4;
+}
+
+.circle__red {
+  background-color: #d63d2e;
 }
