feat: add modal window

--- a/react-api/src/components/SearchBar/SearchBar.css
+++ b/react-api/src/components/SearchBar/SearchBar.css
@@ -12,6 +12,7 @@
   flex-direction: row;
   justify-content: space-between;
   background-color: #fff;
+  border-radius: 10px;
   width: 550px;
   height: 40px;
   border-bottom: 5px solid #9386a4;
