--- a/react-api/src/App.css
+++ b/react-api/src/App.css
@@ -53,6 +53,18 @@ body {
   overflow-y: scroll;
 }
 
+.app__overlay::before {
+  content: "";
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #201f1f65;
+  z-index: 3;
+}
+
 @media (max-width: 1020px) {
   ::-webkit-scrollbar {
     width: 0;
