--- a/react-api/src/components/Modal/Modal.css
+++ b/react-api/src/components/Modal/Modal.css
@@ -1,19 +1,25 @@
 .modal {
+  display: flex;
   position: fixed;
-  width: 450px;
-  height: 200px;
+  width: 800px;
+  height: 400px;
   background-color: #fff;
-  top: calc(50vh - 100px);
-  left: calc(50vw - 225px);
+  top: calc(50vh - 200px);
+  left: calc(50vw - 400px);
+  flex-direction: row;
   z-index: 5;
-  font-size: 30px;
-  text-shadow: 3px 3px 8px #ffc4c7, -3px -3px 8px #ffc4c7;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: #3c3e44 0 20px 30px -10px;
+  transition: all 0.5s;
 }
 
-.modal__message {
-  text-align: center;
-  margin: 10px;
-  margin-top: 25px;
+.modal:hover {
+  box-shadow: #3c3e44 0 20px 90px -20px, #3c3e44 0 30px 30px -30px;
+}
+
+.modal__image {
+  width: 400px;
 }
 
 .modal__close-button {
@@ -30,16 +36,51 @@
   transform: scale(1.1);
 }
 
+.modal__content {
+  padding: 20px;
+  padding-top: 30px;
+}
+
+.modal__content h3 {
+  font-size: 25px;
+  font-family: "Paytone One", sans-serif;
+  letter-spacing: 1.2px;
+}
+
+.modal__wrapper p {
+  margin: 10px 0;
+}
+
+.modal__wrapper {
+  margin: 25px 0;
+}
+
+.modal__wrapper span,
+.modal__caption {
+  color: #9e9e9e;
+}
+
+.modal__container {
+  margin-bottom: 15px;
+}
+
+.modal__purple {
+  background-color: #e9dcfa;
+}
+
+.modal__green {
+  background-color: rgb(230 254 226);
+}
+
+.modal__red {
+  background-color: #fddedb;
+}
+
 @media (max-width: 490px) {
   .modal {
-    position: fixed;
     width: 280px;
     height: 260px;
-    background-color: #fff;
     top: calc(50vh - 130px);
     left: calc(50vw - 140px);
-    z-index: 5;
-    font-size: 27px;
-    text-shadow: 3px 3px 8px #ffc4c7, -3px -3px 8px #ffc4c7;
   }
 }
