--- a/react-api/src/components/Main/Main.css
+++ b/react-api/src/components/Main/Main.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: calc(100vh - 65px);
+  min-height: calc(100vh - 150px);
+  background-color: #202329;
 }
 
 @media (max-width: 540px) {
