--- a/react-api/src/components/Header/Header.css
+++ b/react-api/src/components/Header/Header.css
@@ -19,16 +19,9 @@
   letter-spacing: 2px;
 }
 
-@media (max-width: 540px) {
-  .header {
-    height: 100px;
-    background-color: #000;
-  }
-
-  .header__wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+@media (max-width: 570px) {
+  .header__title {
+    font-size: 35px;
+    margin-top: 50px;
   }
 }
