--- a/react-api/src/components/NotFound/NotFound.css
+++ b/react-api/src/components/NotFound/NotFound.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: calc(100vh - 65px);
+  height: calc(100vh - 150px);
 }
 
 .return-button {
@@ -11,12 +11,14 @@
   flex-direction: row;
   align-items: center;
   padding: 10px 30px;
+  height: 40px;
+  width: 260px;
   background-color: #000;
   color: #f0f0f0;
   border-radius: 8px;
   cursor: pointer;
   font-size: 18px;
-  margin: 70px 0 0;
+  margin: 60px 0 0;
 }
 
 .return-button img {
@@ -29,7 +31,7 @@
 }
 
 .return-button p {
-  margin-top: -3px;
+  margin-top: -2px;
 }
 
 .title {
@@ -45,7 +47,7 @@
 }
 
 .error p {
-  margin: 5px 25px;
+  margin: 15px 25px;
   display: flex;
   align-items: center;
 }
@@ -69,15 +71,9 @@
   text-shadow: 3px 2px 2px #313131be;
 }
 
-@media (max-width: 540px) {
-  .wrapper {
-    height: calc(100vh - 100px);
-  }
-}
-
-@media (max-width: 470px) {
-  .title {
-    max-width: 300px;
+@media (max-width: 530px) {
+  .not-found__title {
+    max-width: 280px;
     text-align: center;
   }
 }
