--- a/react-api/src/components/Results/Results.css
+++ b/react-api/src/components/Results/Results.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 40px;
 }
 
 .results__container {
@@ -14,7 +15,7 @@
 .results__title {
   font-size: 40px;
   font-weight: 700;
-  width: 220px;
+  text-align: center;
 }
 
 .cards__results {
@@ -29,9 +30,12 @@
 @media (max-width: 600px) {
   .cards__results {
     width: 280px;
-    height: 100px;
-    flex-direction: column;
-    justify-content: center;
+    height: 90px;
+    margin: 0 auto 10px;
     align-items: center;
+  }
+
+  .results__title {
+    font-size: 30px;
   }
 }
