--- a/react-api/src/components/SearchBar/SearchBar.css
+++ b/react-api/src/components/SearchBar/SearchBar.css
@@ -51,6 +51,10 @@
     position: relative;
   }
 
+  .search__title {
+    padding-top: 7px;
+  }
+
   .search__image {
     position: absolute;
     right: 10px;
