--- a/react-hooks/src/components/SearchBar/SearchBar.css
+++ b/react-hooks/src/components/SearchBar/SearchBar.css
@@ -3,8 +3,8 @@
   height: 65px;
   background-color: #000;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .search__container {
@@ -35,6 +35,11 @@
   padding: 0 5px;
   background: transparent;
   font-family: inherit;
+}
+
+.search__message {
+  color: #fff;
+  margin-top: 2px;
 }
 
 @media (max-width: 600px) {
