--- a/react-custom-app-state/src/components/Main/Main.css
+++ b/react-custom-app-state/src/components/Main/Main.css
@@ -3,15 +3,21 @@
   flex-direction: column;
   align-items: center;
   min-height: calc(100vh - 150px);
-  background-color: #202329;
+  background-color: #f0f0f0;
 }
 
 .main__container {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .main__message {
-  color: #fff;
   font-size: 30px;
   margin: 20px;
+}
+
+.main__pagination {
+  margin: 30px;
 }
