--- a/react-custom-app-state/src/components/AboutCharacter/AboutCharacter.css
+++ b/react-custom-app-state/src/components/AboutCharacter/AboutCharacter.css
@@ -14,8 +14,8 @@
 }
 
 .about-character__image {
-  width: 400px;
-  margin: 20px;
+  width: 280px;
+  height: 300px;
 }
 
 .about-character__counter {
@@ -24,27 +24,35 @@
   color: rgb(0 136 255);
 }
 
+.about-character__content {
+  max-width: 280px;
+}
+
 .about-character__content h3 {
   font-size: 25px;
   font-family: "Paytone One", sans-serif;
   letter-spacing: 1.2px;
 }
 
-.about-character__wrapper p {
+.about-character__content p {
   margin: 10px 0;
 }
 
-.about-character__wrapper {
-  margin: 25px 0;
-}
-
-.about-character__wrapper span,
+.about-character__content span,
 .about-character__caption {
   color: #9e9e9e;
 }
 
 .about-character__container {
   margin-bottom: 15px;
+}
+
+.about-character__wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: calc(50vh - 300px) 20px 30px;
+  width: 600px;
 }
 
 .about-character__purple {
@@ -59,8 +67,16 @@
   background-color: #fddedb;
 }
 
-@media (max-width: 440px) {
-  .about-character__image {
+@media (max-width: 640px) {
+  .about-character__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 30px 10px;
     width: 280px;
+  }
+
+  .about-character__content h3 {
+    margin-top: 20px;
   }
 }
