feat: add sorting

--- a/react-custom-app-state/src/components/AboutCharacter/AboutCharacter.css
+++ b/react-custom-app-state/src/components/AboutCharacter/AboutCharacter.css
@@ -55,8 +55,8 @@
   width: 600px;
 }
 
-.about-character__purple {
-  background-color: #e9dcfa;
+.about-character__blue {
+  background-color: rgb(224 241 255);
 }
 
 .about-character__green {
