--- a/react-components/src/components/Card/Card.scss
+++ b/react-components/src/components/Card/Card.scss
@@ -26,6 +26,7 @@
   .content {
     padding: 20px;
     color: $light-color;
+    overflow: hidden;
   }
 
   .name {
@@ -34,6 +35,9 @@
     font-size: 25px;
     font-weight: 600;
     font-family: "Paytone One", sans-serif;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     @media (max-width: 655px) {
       margin-bottom: 10px;
